cloud/platform/selfhost/packer/api-gateway/salt/files/envoy-resources.yaml
listeners:
  - name: healthcheck_v4
    address:
      socket_address: { address: 0.0.0.0, port_value: 4486 }
    filter_chains:
      - filters:
          - name: envoy.http_connection_manager
            config:
              stat_prefix: ingress_http
              codec_type: AUTO
              http_protocol_options:
                accept_http_10: true
              route_config:
                name: healthcheck
                virtual_hosts:
                  - name: healthcheck
                    domains: ["*"]
                    routes:
                      - match: { prefix: "/" }
                        route:
                          cluster: gateway_healthcheck
                          timeout: 60s
              http_filters:
                - name: envoy.router

  - name: healthcheck_v6
    address:
      socket_address: { address: "::", port_value: 4486 }
    filter_chains:
      - filters:
          - name: envoy.http_connection_manager
            config:
              stat_prefix: ingress_http
              codec_type: AUTO
              http_protocol_options:
                accept_http_10: true
              route_config:
                name: healthcheck
                virtual_hosts:
                  - name: healthcheck
                    domains: ["*"]
                    routes:
                      - match: { prefix: "/" }
                        route:
                          cluster: gateway_healthcheck
                          timeout: 60s
              http_filters:
                - name: envoy.router

clusters:
  - name: gateway
    connect_timeout: 0.25s
    common_http_protocol_options:
      idle_timeout: 60s
    http2_protocol_options: {}
    type: STATIC
    lb_policy: ROUND_ROBIN
    circuit_breakers:
      thresholds: [{max_requests: 1000}]
    hosts: [{ socket_address: { address: 127.0.0.1, port_value: 9894 }}]

  - name: gateway_healthcheck
    connect_timeout: 0.25s
    common_http_protocol_options:
      idle_timeout: 60s
    type: STATIC
    lb_policy: ROUND_ROBIN
    circuit_breakers:
      thresholds: [{max_requests: 1000}]
    hosts: [{ socket_address: { address: 127.0.0.1, port_value: 9895 }}]
